# generic-cmake-makefile

./: .gitignore  README.md
cmake-cxx/: CMakeLists.txt  README.md
cmake-cxx/cmake/: FindPackages.cmake  SetCompilerFlags.cmake  SetVersion.cmake
cmake-cxx/examples/: CMakeLists.txt
cmake-cxx/include/: main.h
cmake-cxx/src/: CMakeLists.txt  main.cpp
cmake-fortran/: CMakeLists.txt  README.md
cmake-fortran/cmake/: Colors.cmake  FindPackages.cmake  SetCompilerFlags.cmake
cmake-fortran/examples/: CMakeLists.txt
cmake-fortran/src/: CMakeLists.txt  main.f90
make/: Makefile
make-c/: Makefile  main.c
make-cuda/: Makefile
make-cuda/src/: kernel.cuf  main.f90
make-cxx/: Makefile
make-fortran/: Makefile  main.f90
make-fortran-cuda/: Makefile
make-fortran-cuda/src/: cuda.cuf  main.f90
make/src/: main.f90
